applications/guru/guru-apps/ingress/staging/tracer-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracer-ignore-me-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    argocd.argoproj.io/sync-wave: "10"
spec:
  rules:
    - host: "tracer.staging.abhra.shambhala.cloud"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tracer-ignore-me-service
              port:
                number: 5001
  tls:
    - hosts:
        - "tracer.staging.abhra.shambhala.cloud"
      secretName: tracer-cert
